Fix JWT parser and CORS/security config to allow frontend access